# jetson-orin-nx-framos-builder

./: .gitignore  README.md
installer/: Install.yml  Readme.md  demo.sh
installer/playbooks/: configure-os.yml  jetson-imx900-setup.yml  vr-passthrough-setup.yml
vr_passthrough/: CMakeLists.txt  README.md  TODO  config.txt  config_dewarper.txt
vr_passthrough/src/: ArgusCamera.cpp  ArgusCamera.hpp  Config.hpp  DewarpConfig.hpp  GLExtensions.cpp  GLExtensions.hpp  Shaders.hpp  main.cpp
